Revision history for Perl extension App-BorgRestore

{{$NEXT}}

3.4.1 2020-09-27T12:57:01Z
	- Fix missing cache data for files that exist with and without an
	  extension. For example '/home/*/.ssh/id_rsa' would be missing from the
	  database and only the accompanying `id_rsa.pub` file would be contained
	  in the database.

3.4.0 2019-09-28T13:28:49Z
	- Remove archive name untaint restrictions (remove untaint_archive_name
	  function)

3.3.0 2019-02-07T16:18:41Z
	- Support borg list's --prefix option via $borg_prefix setting
	- Properly handle cases where the DB is empty after removal of archive
	  information

3.2.1 2018-11-01T12:54:26Z
	- Add missing version requirement to List::Util dependency

3.2.0 2018-09-19T11:46:35Z
	- Write data directly to DB instead of preparing it in memory first. The
	  new algorithm should be faster and uses constant memory. If you want the
	  old one back for any reason look at the '$prepare_data_in_memory' config
	  option. This option is deprecated and will be removed in the future.

3.1.0 2018-08-25T09:46:27Z
	- Add --json option
	- Add --detail option
	- Log cache update status message per archive to INFO
	- Add --quiet option
	- Remove sqlite cache size warning

3.0.0 2018-03-23T14:57:52Z
	- No longer automatically enable --adhoc when cache is empty

2.3.0 2018-02-06T15:58:36Z
	- Add --list option to search for paths occuring in backups
	- Warn if sqlite's memory cache is is filled during cache updates
	- Improve documentation of @backup_prefixes setting

2.2.0 2017-11-25T23:16:04Z
	- Add borg 1.1 support
	- Mention required positive return code of config in documentation
	- Enable adhoc mode automatically when cache is empty

2.1.1 2017-10-05T07:58:12Z
	- Fix incorrect/missing dependencies
	- Use autodie everywhere to catch errors early
	- Add basic documentation to internal packages

2.1.0 2017-06-24T15:26:08Z
	- Improve documentation
	- chdir back to original working directory after restore

2.0.1 2017-06-04T17:44:27Z
