@@ -1,6 +1,9 @@
 Revision history for Perl extension App-BorgRestore
 
 {{$NEXT}}
+	- Fix missing cache data for top level files that exist with and without an
+	  extension. For example a '/lib' symlink and '/lib64'. '/lib' would be
+	  missing from the database.
 
 3.4.1 2020-09-27T12:57:01Z
 	- Fix missing cache data for files that exist with and without an
